clearnet-website-monitoring/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clearnet-website-monitoring
  namespace: clearnet-website-monitoring
  labels:
    app: clearnet-website-monitoring
spec:
  type: ClusterIP
  ports:
    - port: 9877
      targetPort: 9877
      protocol: TCP
      name: metrics
    - port: 8081
      targetPort: 8081
      protocol: TCP
      name: viewer
  selector:
    app: clearnet-website-monitoring
