clearnet-website-monitoring/httproute-internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: clearnet-evidence-internal
  namespace: clearnet-website-monitoring
spec:
  parentRefs:
    - name: internal
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - clearnet-evidence.i.shion1305.com
  rules:
    - backendRefs:
        - name: clearnet-website-monitoring
          port: 8081
